--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,3 +1,45 @@
+# name: Node.js CI/CD on Amazon Linux
+
+# on:
+#   push:
+#     branches:
+#       - master
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 18
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Deploy to AWS EC2
+#         uses: appleboy/scp-action@v0.1.7
+#         with:
+#           host: ${{ secrets.REMOTE_HOST }}
+#           username: ${{ secrets.REMOTE_USER }}
+#           key: ${{ secrets.SSH_PRIVATE_KEY }}
+#           source: .
+#           target: /var/www/sample-local-nodejs-to-ec2
+
+#       - name: Restart PM2 application
+#         uses: appleboy/ssh-action@v1.0.3
+#         with:
+#           host: ${{ secrets.REMOTE_HOST }}
+#           username: ${{ secrets.REMOTE_USER }}
+#           key: ${{ secrets.SSH_PRIVATE_KEY }}
+#           script: |
+#             cd /var/www/sample-local-nodejs-to-ec2
+#             pm2 reload ecosystem.config.js --env production
+
 name: Node.js CI/CD on Amazon Linux
 
 on:
@@ -10,22 +52,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout source code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Node.js (only for lint/tests if needed)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      # ❌ DO NOT install node_modules on GitHub
+      # (removed npm install step)
+
+      # 3️⃣ Upload ONLY application source (no .git, no node_modules)
       - name: Deploy to AWS EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: .
+          source: |
+            ecosystem.config.js
+            package.json
+            package-lock.json
+            server.js
+            src
           target: /var/www/sample-local-nodejs-to-ec2
-          exclude: |
-            node_modules
-            .git
-            .github
+          rm: true
 
+      # 4️⃣ Install deps & restart PM2 on the server
       - name: Install dependencies & restart PM2
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -34,5 +90,5 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www/sample-local-nodejs-to-ec2
-            npm install --production
+            npm ci --production
             pm2 reload ecosystem.config.js --env production
