--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,40 +2,33 @@ name: Node.js CI/CD on Amazon Linux
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+      - name: Install dependencies
+        run: npm install
 
       - name: Deploy to AWS EC2
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "./"
-          target: /var/www/sample-local-nodejs-to-ec2
-          rm: true
-          strip_components: 0
+          target: "/var/www/sample-local-nodejs-to-ec2"
 
-      - name: Install dependencies & restart PM2
-        uses: appleboy/ssh-action@v1.0.3
+      - name: Restart PM2 application
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www/sample-local-nodejs-to-ec2
-            npm ci --production
-            pm2 reload ecosystem.config.js --env production
+            pm2 reload all
